Add Get Namespace Limits API (#4899)
